1, separate array and dynamic array 2, enhance the performance of dy_array
vet: me

--- a/common/project/UTool.vcproj
+++ b/common/project/UTool.vcproj
@@ -228,6 +228,10 @@
 				RelativePath="..\Src\UTool\DataStructure\array.h"
 				>
 			</File>
+			<File
+				RelativePath="..\src\UTool\Base\dy_array.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
