fix a bug about double free
vet: me

--- a/common/project/UTool.vcproj
+++ b/common/project/UTool.vcproj
@@ -229,7 +229,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\UTool\Base\dy_array.h"
+				RelativePath="..\src\UTool\DataStructure\dy_array.h"
 				>
 			</File>
 		</Filter>
