--- a/trunk/test/Test.vcproj
+++ b/trunk/test/Test.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Common\Src\UTool\Base&quot;;&quot;$(SolutionDir)\Common\Src\UTool\DataStructure&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Thread&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Common\Src\UTool\Base&quot;;&quot;$(SolutionDir)\Common\Src\UTool\DataStructure&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Thread&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Memory&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -116,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Common\Src\UTool\Base&quot;;&quot;$(SolutionDir)\Common\Src\UTool\DataStructure&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Thread&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Common\Src\UTool\Base&quot;;&quot;$(SolutionDir)\Common\Src\UTool\DataStructure&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Thread&quot;;&quot;$(SolutionDir)\Common\Src\UTool\Memory&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
