--- a/test/Test.vcproj
+++ b/test/Test.vcproj
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="Psapi.lib Dbghelp.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(SolutionDir)\Common\bin\$(ConfigurationName)"
 				GenerateDebugInformation="true"
@@ -135,6 +136,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="Psapi.lib Dbghelp.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(SolutionDir)\Common\bin\$(ConfigurationName)"
 				GenerateDebugInformation="true"
