--- a/test/Test.vcproj
+++ b/test/Test.vcproj
@@ -177,6 +177,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\allocator_test.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\array_test.cpp"
 				>
 			</File>
@@ -191,7 +195,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\allocator_test.h"
+				>
+			</File>
+			<File
 				RelativePath=".\array_test.h"
+				>
+			</File>
+			<File
+				RelativePath=".\time_scope.h"
 				>
 			</File>
 		</Filter>
