--- a/trunk/common/makefile
+++ b/trunk/common/makefile
@@ -1,7 +1,10 @@
 UTool.a:
 	gcc -Isrc/UTool/Base -Isrc/UTool/DataStructure -Isrc/UTool/Thread -o util.o -Wall \
 		-c src/UTool/Base/util.cpp
-	ar crv bin/UTool.a util.o
+	gcc -Isrc/UTool/Base -Isrc/UTool/Thread -Isrc/UTool/Memory -o allocator.o -Wall \
+		-c src/UTool/Memory/allocator.cpp
+
+	ar crv bin/UTool.a util.o allocator.o
 
 clean:
 	rm *.o
