--- a/easynet/makefile
+++ b/easynet/makefile
@@ -1,2 +1,2 @@
-main: main.cpp
-	gcc -O0 -g3 main.cpp -lstdc++ -o main
+main: easy_test.cpp
+	gcc -pthread -o main easy_test.cpp easy_connection.cpp easy_acceptor.cpp easy_worker.cpp -lstdc++
