make it compilable (not fully fixed)

--- a/common/makefile
+++ b/common/makefile
@@ -1,10 +1,8 @@
-UTool.a:
-	gcc -Isrc/UTool/Base -Isrc/UTool/DataStructure -Isrc/UTool/Thread -o util.o -Wall \
-		-c src/UTool/Base/util.cpp
-	gcc -Isrc/UTool/Base -Isrc/UTool/Thread -Isrc/UTool/Memory -o allocator.o -Wall \
-		-c src/UTool/Memory/allocator.cpp
+Common.a:
+	gcc -Isrc -o util.o -Wall -c src/util.cpp
+	gcc -Isrc -o allocator.o -Wall -c src/allocator.cpp
 
-	ar crv bin/UTool.a util.o allocator.o
+	ar crv Common.a util.o allocator.o
 
 clean:
 	rm *.o
