--- a/trunk/test/project/NetworkTest.vcxproj
+++ b/trunk/test/project/NetworkTest.vcxproj
@@ -58,7 +58,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\..\network\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\network\src;..\..\common\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
