--- a/trunk/network/makefile
+++ b/trunk/network/makefile
@@ -1,2 +1,9 @@
-main: easy_test.cpp
-	gcc -pthread -D_LINUX=1 -o main easy_test.cpp easy_connection.cpp easy_acceptor.cpp easy_worker.cpp -lstdc++
+Network.a:
+	gcc -Isrc -pthread -D_LINUX=1 -o easy_connection.o -Wall -c src/easy_connection.cpp -lstdc++
+	gcc -Isrc -pthread -D_LINUX=1 -o easy_acceptor.o -Wall -c src/easy_acceptor.cpp -lstdc++
+	gcc -Isrc -pthread -D_LINUX=1 -o easy_worker.o -Wall -c src/easy_worker.cpp -lstdc++
+
+	ar crv Network.a easy_connection.o easy_acceptor.o easy_worker.o
+
+clean:
+	rm *.o
