add easylog (only test windows version)

--- a/common/project/Common.vcxproj
+++ b/common/project/Common.vcxproj
@@ -17,10 +17,13 @@
     <ClInclude Include="..\src\array.h" />
     <ClInclude Include="..\src\array_base.h" />
     <ClInclude Include="..\src\auto_locker.h" />
+    <ClInclude Include="..\src\base.h" />
     <ClInclude Include="..\src\common.h" />
     <ClInclude Include="..\src\ds_aux.h" />
     <ClInclude Include="..\src\dy_array.h" />
     <ClInclude Include="..\src\dy_string.h" />
+    <ClInclude Include="..\src\easy_buffer.h" />
+    <ClInclude Include="..\src\easy_log.h" />
     <ClInclude Include="..\src\format.h" />
     <ClInclude Include="..\src\ft_assert.h" />
     <ClInclude Include="..\src\linux_base.h" />
@@ -40,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\allocator.cpp" />
+    <ClCompile Include="..\src\easy_buffer.cpp" />
+    <ClCompile Include="..\src\easy_log.cpp" />
     <ClCompile Include="..\src\util.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
