--- a/trunk/test/project/NetworkTest.vcxproj
+++ b/trunk/test/project/NetworkTest.vcxproj
@@ -63,7 +63,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;network.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;network.lib;common.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\bin</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
