--- a/common/project/Common.vcxproj.filters
+++ b/common/project/Common.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="..\src\base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\easy_pool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
