--- a/trunk/test/project/MidwareTest.vcxproj
+++ b/trunk/test/project/MidwareTest.vcxproj
@@ -60,7 +60,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\..\bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ws2_32.lib;common.lib;midware.lib;network.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;common.lib;midware.lib;network.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
