--- a/midware/project/Midware.vcxproj.filters
+++ b/midware/project/Midware.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\src\easy_session.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\easy_baseclient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\easy_packet.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\easy_baseloop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\easy_baseclient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
