--- a/midware/project/Midware.vcxproj
+++ b/midware/project/Midware.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\easy_baseclient.cpp" />
     <ClCompile Include="..\src\easy_baseserver.cpp" />
     <ClCompile Include="..\src\easy_command.cpp" />
     <ClCompile Include="..\src\easy_dispatcher.cpp" />
@@ -18,6 +19,7 @@
     <ClCompile Include="..\src\easy_session.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\easy_baseclient.h" />
     <ClInclude Include="..\src\easy_baseserver.h" />
     <ClInclude Include="..\src\easy_command.h" />
     <ClInclude Include="..\src\easy_dispatcher.h" />
@@ -67,7 +69,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\..\common\src;..\..\network\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\common\src;..\..\network\src;..\..\simplenet\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
